# model-link

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml
backend/: .dockerignore  .env.example  Dockerfile  cloudbuild.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  test_fallback_429.py  test_mcp_http.py  test_tool_result_image.py  test_tool_schema.py
backend/.claude/plans/: arq-integration.md  delete-sync-cache-code.md
backend/app/: __init__.py  _task_tracing.py  arq_client.py  arq_worker.py  auth.py  background_response_dao.py  budget_manager.py  cache.py  database.py  election_service.py  exchange_rate_service.py  group_service.py  http_client.py  main.py  models.py  qps_rate_limiter.py  rate_limiter.py  request_context.py  schemas.py  thinking_record_dao.py  usage_service.py  usage_sync_service.py  user_service.py  utils.py
backend/app/abstraction/: __init__.py  chat.py  embedding.py  messages.py  rerank.py  streaming.py  tools.py
backend/app/adapters/: MESSAGES_STREAMING_PROTOCOL.md  RESPONSES_STREAMING_PROTOCOL.md  __init__.py  anthropic_adapter.py  base.py  openai_adapter.py  responses_adapter.py
backend/app/data/: __init__.py  anthropic_templates.py  azure_templates.py  bailian_templates.py  byteplus_templates.py  deepseek_templates.py  glm_templates.py  google_templates.py  hunyuan_templates.py  minimax_templates.py  moonshot_templates.py  mulerun_templates.py  openai_templates.py  tencentvod_templates.py  vertexai_templates.py  volcengine_templates.py
backend/app/mcp/: __init__.py  asgi.py  moderation.py  server.py
backend/app/middleware/: __init__.py  gateway_service.py
backend/app/monitoring/: __init__.py  base.py  langfuse_tracer.py
backend/app/providers/: __init__.py  _responses_format.py  _schema_utils.py  anthropic_provider.py  azure_provider.py  bailian_provider.py  base.py  deepseek_provider.py  gemini_provider.py  glm_provider.py  image_size_utils.py  minimax_provider.py  moonshot_provider.py  openai_chatcompletions_compt_provider.py  openai_compatible.py  openai_provider.py  openai_responses_compt_provider.py  tencentvod_provider.py  vertexai_provider.py  video_size_utils.py  vllm_provider.py  volcengine_provider.py
backend/app/routers/: apikeys.py  gateway.py  providers.py  users.py
backend/app/routes/: __init__.py  admin.py  apikeys.py  cleanup.py  embeddings.py  files.py  gateway.py  gateway_helpers.py  gateway_responses.py  images.py  model_templates.py  permissions.py  providers.py  rerank.py  tags.py  usage.py  users.py
backend/app/stats/: __init__.py  metabase_client.py
backend/app/storage/: __init__.py  base.py  factory.py  local.py  s3.py
backend/app/usagerecord/: __init__.py  background_resync_service.py  compress_service.py  model_classifier.py  stat.py  sync_service.py  task_status_checker.py  usage_service.py
backend/migrations/: env.py
backend/migrations/versions/: 041c7168af5e_add_support_thinking_field_in_ml_models.py  07a532f3f07b_add_credits_and_credit_price_unit_to_.py  08a0358306d4_add_thinking_records_table.py  0f45452122a5_add_tags_field_to_provider_for_billing_.py  (+67 more)
backend/tests/: test_additional_tools.py  test_anthropic_finish_chunk.py  test_b64_decode.py  test_bailian_request_transform.py  test_mcp_moderation.py  test_openai_stream_reasoning.py  test_seedance_video_generation.py  test_tool_result_image.py  test_volcengine_api_type_routing.py  test_volcengine_reasoning_mapping.py  test_volcengine_request_transform.py  test_volcengine_responses_chatcompletions.py
(+122 files in other folders)
