[project]
name = "model-link"
version = "0.1.0"
description = "AI Gateway - Unified interface for multiple LLM providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "quart>=0.19.0",
    "quart-cors>=0.7.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.0",
    "sqlalchemy>=2.0.31",
    "pydantic[email]>=2.9.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.1",
    "aiomysql>=0.2.0",
    "asyncpg>=0.29.0",
    "cryptography>=43.0.0",
    "httpx>=0.27.2",
    "aiosqlite>=0.20.0",
    "uvicorn[standard]>=0.30.0",
    "google-auth>=2.29.0",
    "requests>=2.31.0",
    "boto3>=1.42.88",
    "langfuse>=2.0.0",
    "tooz>=6.0.0",
    "redis>=5.0.0",
    "arq>=0.26.0",
    "demjson3>=3.0.6",
    "json-repair>=0.30.0",
    "greenlet>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aiodebug>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiodebug>=2.3.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
